# deepread

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
deepread/: __init__.py  __main__.py  config.py
deepread/api/: __init__.py  router.py
deepread/cli/: __init__.py  commands.py
deepread/ingest/: __init__.py  pipeline.py  workspace.py
deepread/ingest/converters/: __init__.py
deepread/insights/: __init__.py  models.py  summarizer.py  templates.py
deepread/ocr/: __init__.py  deepseek.py
deepread/ocr/process/: __init__.py  image_process.py  ngram_norepeat.py
deepread/performance/: __init__.py  benchmarks.py
deepread/render/: __init__.py  image_renderer.py
deepread/ui/: app.py
docs/: ocr-insights.md
openspec/: project.md
openspec/changes/archive/2025-10-30-add-deepseek-ocr-integration/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-30-add-deepseek-ocr-integration/specs/ocr/: spec.md
openspec/changes/fix-vllm-ocr-implementation/: design.md  proposal.md  tasks.md
openspec/changes/fix-vllm-ocr-implementation/specs/ocr/: spec.md
openspec/specs/ocr/: spec.md
tests/: conftest.py
tests/cli/: test_cli_batch_manifest.py  test_cli_single_document.py  test_cli_structured_outputs.py
tests/contract/: test_fastapi_contract.py
tests/data/ocr_insights/: README.md
tests/integration/api/: test_batch_progress.py  test_structured_outputs.py
tests/integration/pipeline/: test_job_manager.py  test_single_document_pipeline.py
tests/performance/: document_latency_benchmark.py  resource_usage.py
tests/ui/: test_streamlit_batch.py
tests/unit/: test_config.py
tests/unit/ingest/: test_workspace.py
tests/unit/ingest/converters/: test_single_document_converters.py
tests/unit/insights/: test_models.py  test_output_schemas.py  test_summarizer.py
tests/unit/ocr/: test_deepseek.py
tests/unit/render/: test_image_renderer.py
