[project]
name = "deepread"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "streamlit>=1.37.0",
    "pillow>=10.3.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "beautifulsoup4>=4.12.3",
    "pydantic>=2.8.2",
    "pypdf>=4.2.0",
    "pdf2image>=1.17.0",
    "html2image>=2.0.4",
    "pandas>=2.2.2",
    "docx2pdf>=0.1.8",
    "imgkit>=1.2.3",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7.0",
    "mypy>=1.11.1",
    "deptry>=0.16.0",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "markdown-it-py>=3.0.0",
    "python-multipart>=0.0.9",
    "types-openpyxl>=3.1.5.20250919",
    "pandas-stubs>=2.3.2.250926",
]


[tool.setuptools.packages.find]
include = ["deepread*"]
exclude = ["specs*", "tests*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.mypy]
files = ["deepread"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.deptry]
exclude = ["examples", "venv", ".venv", "tmp"]

[tool.deptry.per_rule_ignores]
DEP003 = ["click"]
DEP004 = ["pytest"]

[[tool.mypy.overrides]]
module = ["imgkit", "html2image", "docx2pdf"]
ignore_missing_imports = true
